--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img src="https://images.icon-icons.com/2699/PNG/512/minecraft_logo_icon_168099.png" alt="Minecraft Logo" class="logo" />
         <h3 class="profesion_Nombre">jugador</h3>
         <div class="buttons">
-          <button onclick="playGame()" class="minecraft-btn">Gabriel Astudillo Martinez</button>
+          <button onclick="playGame()" class="minecraft-btn">Proyectos</button>
           <button onclick="openOptions()" class="minecraft-btn">Opciones</button>
           <button onclick="exitGame()" class="minecraft-btn">Salir</button>
         </div>
