--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="overlay">
       <div class="menu">
         <img src="https://images.icon-icons.com/2699/PNG/512/minecraft_logo_icon_168099.png" alt="Minecraft Logo" class="logo" />
-        <h3 class="profesion_Nombre">jugador</h3>
+        <h3 class="profesion_Nombre">Gabriel Astudillo Martinez - Desarrollador de videojuegos</h3>
         <div class="buttons">
           <button onclick="playGame()" class="minecraft-btn">Proyectos</button>
           <button onclick="openOptions()" class="minecraft-btn">Opciones</button>
