--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </section>
 
   <section id="project-section" class="project-list">
-    <h2 class="section-title">Tus Mundos</h2>
+    <h2 class="section-title">Mis Proyectos</h2>
     <div class="projects-container">
       <div class="project">
         <img src="images/image2.png" alt="Proyecto 1">
