--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h3 class="profesion_Nombre">Gabriel Astudillo Martinez - Desarrollador de videojuegos</h3>
         <div class="buttons">
           <button onclick="playGame()" class="minecraft-btn">Proyectos</button>
-          <button onclick="openOptions()" class="minecraft-btn">Opciones</button>
+          <button onclick="goContacto()" class="minecraft-btn">Contacto</button>
           <button onclick="exitGame()" class="minecraft-btn">Salir</button>
         </div>
       </div>
@@ -46,18 +46,18 @@
     </div>
   </section>
   
-  <section class="contacto-section">
+  <section id = contacto-section class="contacto-section">
     <h2 class="section-title">Contacto</h2>
     <p class="contact-item">Email: gabriel.astudillo.martinez@gmail.com</p>
     <p class="contact-item">Número: +123 4567 8901</p>
+    
+    <div class="perfil-usuario">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQTJOxWh-QirKWXBNhjtnpR8ChEzi4K0X5nHA&s" alt="Tu foto" class="foto-perfil">
+      <h4 class="nombre-perfil">Gabriel Astudillo</h4>
+      <p class="descripcion-perfil">Desarrollador apasionado por los videojuegos y experiencias interactivas.</p>
+    </div>
     <button onclick="subirGame()" class="btn_arriba">Subir</button>
   </section>
-  
-  <div class="perfil-usuario">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQTJOxWh-QirKWXBNhjtnpR8ChEzi4K0X5nHA&s" alt="Tu foto" class="foto-perfil">
-    <h4 class="nombre-perfil">Gabriel Astudillo</h4>
-    <p class="descripcion-perfil">Desarrollador apasionado por los videojuegos y experiencias interactivas.</p>
-  </div>
   
   <script src="script.js"></script>
 </body>
